--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 										<h2><a href="https://github.com/jareyc/GasPrices-Project">Tableau and Python <br> Project</a></h2>
 									</header>
-									<a href="https://github.com/jareyc/GasPrices-Project" class="image fit"><img src="images/gas.png" height="360" alt="" /></a>
+									<a href="https://github.com/jareyc/GasPrices-Project" class="image fit"><img src="images/gas.png" alt="" /></a>
 									<p>Since the start of Russia's invasion of Ukraine on February 24th, 2022, gas prices have skyrocketed to an unprecedented height. This project uses Python to web scrape data on U.S. gas prices which is then fed into Tableau to visualize the gas trends.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jareyc/GasPrices-Project" class="button">View Project</a></li>
@@ -73,7 +73,7 @@
 									<header>
 										<h2><a href="https://github.com/jareyc/Covid-Project">SQL and Tableau <br>Project</a></h2>
 									</header>
-									<a href="https://github.com/jareyc/Covid-Project" class="image fit"><img src="images/covid.png" height="360" alt="" /></a>
+									<a href="https://github.com/jareyc/Covid-Project" class="image fit"><img src="images/covid.png" alt="" /></a>
 									<p>The COVID-19 pandemic has impacted human society in every aspect and in every corner of the world. This project uses SQL and Tableau to explore a large COVID-19 dataset and depict just how damaging it has been so far. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/jareyc/Covid-Project" class="button">View Project</a></li>
