Added phone number, fixed bugs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Ja-Rey Corcuera</h1>
 						<p> Entry-level graduate from The University of Utah with a B.S. in mechanical engineering and a minor in computer science. Currently seeking full-time, remote employment in data science and analytics. Check out my projects that use Python, SQL, Tableau, and more below!</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
@@ -91,8 +91,16 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section class="split contact">
+							<section class="alt">
+								<h3>Location</h3>
+								<p>Tampa, FL</p>
+							</section>
 							<section>
-								<h3>Contact Me</h3>
+								<h3>Phone</h3>
+								<p><a href="tel:714-721-4577">(714) 721-4577</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
 								<p><a href="mailto: jareycorcuera@hotmail.com">jareycorcuera@hotmail.com</a></p>
 							</section>
 							<section>
