Updated March 2023, links open in new tab

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Ja-Rey Corcuera</h1>
-						<p> Entry-level graduate from The University of Utah with a B.S. in mechanical engineering and a minor in computer science. Currently seeking full-time, remote employment in data science and analytics. Check out my projects that use Python, SQL, Tableau, and more below!</p>
+						<p> Passionate and detail-oriented data administrator for Brave Health with proven skills in data visualization, data cleaning, statistical analysis, and programming. Graduated from the University of Utah in 2022 with a B.S. in mechanical engineering and a minor in computer science. Currently seeking full-time, remote employment in data science and analytics. Check out my projects that use Python, SQL, Tableau, and more below!</p>
 						<ul class="actions">
 							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -35,8 +35,8 @@
 
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/jareycorcuera/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-							<li><a href="https://github.com/jareyc" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/jareycorcuera/"  target="_blank" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+							<li><a href="https://github.com/jareyc"  target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -46,13 +46,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/jareyc/Coffee-Project">Data Science Course <br> Python Project
+									<h2><a href="https://github.com/jareyc/Coffee-Project" target="_blank" >Data Science Course <br> Python Project
 										</a></h2>
 									<p>Coffee is found in all corners of the world but where does the BEST coffee come from? Named the "Best Project" out of over 20 other teams, this project features many skills and tools used in data science/analytics such as web scraping, data wrangling, data cleaning, regression analysis, geospatial data visualization, and predictive modeling. </p>
 								</header>
-								<a href="https://github.com/jareyc/Coffee-Project" class="image main"><img src="images/coffee.png" alt="" /></a>
+								<a href="https://github.com/jareyc/Coffee-Project"  target="_blank" class="image main"><img src="images/coffee.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/jareyc/Coffee-Project" class="button large">View Project</a></li>
+									<li><a href="https://github.com/jareyc/Coffee-Project"  target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -61,22 +61,22 @@
 								<article>
 									<header>
 
-										<h2><a href="https://github.com/jareyc/GasPrices-Project">Tableau and Python <br> Project</a></h2>
+										<h2><a href="https://github.com/jareyc/GasPrices-Project" target="_blank" >Tableau and Python <br> Project</a></h2>
 									</header>
-									<a href="https://github.com/jareyc/GasPrices-Project" class="image fit"><img src="images/gas.png" alt="" /></a>
+									<a href="https://github.com/jareyc/GasPrices-Project"  target="_blank" class="image fit"><img src="images/gas.png" alt="" /></a>
 									<p>Since the start of Russia's invasion of Ukraine on February 24th, 2022, gas prices have skyrocketed to an unprecedented height. This project uses Python to web scrape data on U.S. gas prices which is then fed into Tableau to visualize the gas trends.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/jareyc/GasPrices-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/jareyc/GasPrices-Project"  target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/jareyc/Covid-Project">SQL and Tableau <br>Project</a></h2>
+										<h2><a href="https://github.com/jareyc/Covid-Project" target="_blank" >SQL and Tableau <br>Project</a></h2>
 									</header>
-									<a href="https://github.com/jareyc/Covid-Project" class="image fit"><img src="images/covid.png" alt="" /></a>
+									<a href="https://github.com/jareyc/Covid-Project"  target="_blank" class="image fit"><img src="images/covid.png" alt="" /></a>
 									<p>The COVID-19 pandemic has impacted human society in every aspect and in every corner of the world. This project uses SQL and Tableau to explore a large COVID-19 dataset and depict just how damaging it has been so far. </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/jareyc/Covid-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/jareyc/Covid-Project"  target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
@@ -93,7 +93,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Tampa, FL</p>
+								<p>Las Vegas, NV</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -101,13 +101,14 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto: jareycorcuera@hotmail.com">jareycorcuera@hotmail.com</a></p>
+								<p><a href="mailto: jareycorcuera@gmail.com">jareycorcuera@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/jareycorcuera/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-									<li><a href="https://github.com/jareyc" class="icon brands fa-github"><span class="label">GitHub</span></a></li>								</ul>
+									<li><a href="https://www.linkedin.com/in/jareycorcuera/" target="_blank"  class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+									<li><a href="https://github.com/jareyc" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
 							</section>
 						</section>
 					</footer>
