--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Ja-Rey Corcuera</h1>
-						<p> Passionate and detail-oriented data administrator for Brave Health with proven skills in data visualization, data cleaning, statistical analysis, and programming. Graduated from the University of Utah in 2022 with a B.S. in mechanical engineering and a minor in computer science. Currently seeking full-time, remote employment in data science and analytics. Check out my projects that use Python, SQL, Tableau, and more below!</p>
+						<p> As a recent mechanical engineering graduate from the University of Utah, I have found my passion in data analytics and data science and am currently working as a data administrator at Brave Health to gain hands-on experience in the field. Highly skilled in computer programming, SQL, Python, Excel, and Tableau, I am excited to leverege my skills and knowledge to drive data-driven insights and solutions for complex business challenges. Check out my projects below!</p>
 						<ul class="actions">
 							<li><a href="#main" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
